--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-#POSTGRES_SERVER=localhost
-POSTGRES_SERVER=db
+POSTGRES_SERVER=localhost
+#POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
