Change the colors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,7 +135,8 @@ services:
 
       # Enable redirection for HTTP and HTTPS
       - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.middlewares=https-redirect
-
+    #volumes:
+    #  - ./backend:/app 
   frontend:
     image: '${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}'
     restart: always
@@ -164,6 +165,8 @@ services:
 
       # Enable redirection for HTTP and HTTPS
       - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.middlewares=https-redirect
+    #volumes:
+     # - ./frontend:/app
 volumes:
   app-db-data:
 
